--- a/index.html
+++ b/index.html
@@ -10,5 +10,44 @@
   <div class="background">
 
   </div>
+  <div class="sign-up">
+    <div class="information">
+      <p>This is not a real online service!
+        You know you need something like this in your life to help you realize your deepest dreams.
+        Sign up <em>now</em> to get started.
+      </p>
+      <p>You <em>know</em> you want to.</p>
+    </div>
+    <div class="form">
+      <form action="" method="get">
+        <h1>Let's do this!</h1>
+        <div class="form-section">
+          <label for="first_name">FIRST NAME</label>
+          <input type="text" id="first_name" name="first_name">
+
+          <label for="last_name">LAST NAME</label>
+          <input type="text" id="last_name" name="last_name">
+        </div>
+        <div class="form-section">
+          <label for="email">EMAIL</label>
+          <input type="email" id="email" name="email">
+
+          <label for="phone">PHONE NUMBER</label>
+          <input type="tel" id="phone" name="phone">
+        </div>
+        <div class="form-section">
+          <label for="passwd">PASSWORD</label>
+          <input type="password" id="passwd" name="passwd">
+
+          <label for="confirm_passwd">CONFIRM PASSWORD</label>
+          <input type="tel" id="confirm_passwd" name="confirm_passwd">
+        </div>
+      </form>
+    </div>
+    <div class="account">
+      <button type="submit">Create Account</button>
+      <p>Already have an account? <a href="">Log in</a></p>
+    </div>
+  </div>
 </body>
 </html>
