--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
 </head>
 <body>
   <div class="background">
-
+    <div class="banner">
+      <img src="./images/odin-lined.png" alt="Odin logo">
+      <p>ODIN</p>
+    </div>
+    <div class="author">
+      Photo by Halie West on Unsplash
+    </div>
   </div>
   <div class="sign-up">
-    <div class="information">
+    <div class="information-section">
       <p>This is not a real online service!
         You know you need something like this in your life to help you realize your deepest dreams.
         Sign up <em>now</em> to get started.
       </p>
       <p>You <em>know</em> you want to.</p>
     </div>
-    <div class="form">
+    <div class="form-section">
       <form action="" method="get">
         <h1>Let's do this!</h1>
         <div class="form-section">
@@ -44,7 +50,7 @@
         </div>
       </form>
     </div>
-    <div class="account">
+    <div class="account-section">
       <button type="submit">Create Account</button>
       <p>Already have an account? <a href="">Log in</a></p>
     </div>
