Add links to author section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <p>ODIN</p>
     </div>
     <div class="author">
-      Photo by Halie West on Unsplash
+      <p>Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on 
+        <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a>
+      </p>
     </div>
   </div>
   <div class="sign-up">
