--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </p>
       <p>You <em>know</em> you want to.</p>
     </div>
-    <div class="form-section">
+    <div class="form-middle">
       <form action="" method="get">
         <h1>Let's do this!</h1>
         <div class="form-section">
