--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <div class="sign-up">
     <div class="information-section">
       <p>This is not a real online service!
-        You know you need something like this in your life to help you realize your deepest dreams.
-        Sign up <em>now</em> to get started.
+        You know you need something<br> like this in your life to help you realize your deepest dreams.
+        <br>Sign up <i>now</i> to get started.
       </p>
-      <p>You <em>know</em> you want to.</p>
+      <p>You <i>know</i> you want to.</p>
     </div>
     <div class="form-middle">
       <form action="" method="get">
