Add different borders on focus and invalid (input)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             <label for="email">EMAIL</label>
             <input type="email" id="email" name="email">
           </p>
-
           <p> 
             <label for="phone">PHONE NUMBER</label>
             <input type="tel" id="phone" name="phone">
@@ -57,7 +56,7 @@
           </p>
           <p>
             <label for="confirm_passwd">CONFIRM PASSWORD</label>
-            <input type="tel" id="confirm_passwd" name="confirm_passwd">
+            <input type="password" id="confirm_passwd" name="confirm_passwd">
           </p>
         </div>
       </form>
